--- a/views/account_analytic_project_integration_view.xml
+++ b/views/account_analytic_project_integration_view.xml
@@ -2,6 +2,26 @@
 <odoo>
     <data>
 
+        <record id="acc_proj_integration_form_inherit" model="ir.ui.view">
+            <field name="name">acc_proj_integration.form.inherit</field>
+            <field name="model">account.analytic.account</field>
+            <field name="inherit_id" ref="analytic.view_account_analytic_account_form"/>
+            <field name="arch" type="xml">
+                <group name="main">
+                    <group>
+                        <field name="date_start"/>
+                        <field name="date_stop"/>
+                        <field name="notes"/>
+                        <field name="type"/>
+                        <field name="manager_id" options="{'no_create': True, 'no_create_edit':True}"/>
+                        <field name="company_id" options="{'no_create': True, 'no_create_edit':True}"/>
+                    </group>
+                    <gorup>
+
+                    </gorup>
+                </group>
+            </field>
+        </record>
 
 
 
