added feature create new project - not finished

--- a/views/account_analytic_project_integration_view.xml
+++ b/views/account_analytic_project_integration_view.xml
@@ -7,6 +7,15 @@
             <field name="model">account.analytic.account</field>
             <field name="inherit_id" ref="analytic.view_account_analytic_account_form"/>
             <field name="arch" type="xml">
+                <xpath expr="/form/*" position="before">
+                    <header>
+                        <button name="action_pending" string="To Renew" type="object" attrs="{'invisible': [('state', 'not in', ['open'])]}"/>
+                        <button name="action_close" string="Closed" type="object" attrs="{'invisible': [('state', 'not in', ['open', 'pending'])]}"/>
+                        <button name="action_cancelled" string="Cancelled" type="object" attrs="{'invisible': [('state', 'not in', ['open', 'pending'])]}"/>
+                        <field name="state" widget="statusbar" statusbar_visible="open,pending,close"/>
+                    </header>
+                </xpath>
+
                 <group name="main">
                     <group>
                         <field name="date_start"/>
@@ -16,16 +25,9 @@
                         <field name="manager_id" options="{'no_create': True, 'no_create_edit':True}"/>
                         <field name="company_id" options="{'no_create': True, 'no_create_edit':True}"/>
                     </group>
-                    <gorup>
-
-                    </gorup>
                 </group>
             </field>
         </record>
-
-
-
-
 
     </data>
 </odoo>
